--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Arya&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css" />
-    <link rel="stylesheet" href="/node_modules/normalize.css/normalize.css" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css" />
     <title>Shelter</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
                 </div>
                 <ul>
                     <li><a class="nav-link active" href="#">About the shelter</a></li>
-                    <li><a class="nav-link" href="/pets.html">Our pets</a></li>
+                    <li><a class="nav-link" href="pets.html">Our pets</a></li>
                     <li><a class="nav-link" href="#help">Help the shelter</a></li>
                     <li><a class="nav-link" href="#footer">Contacts</a></li>
                 </ul>
@@ -49,12 +49,12 @@
                 </p>
                 <a class="btn-primary" href="#pets">Make a friend</a>
             </div>
-                <img src="/images/start-screen-puppy.png" alt="start-screen-puppy" />
+                <img src="images/start-screen-puppy.png" alt="start-screen-puppy" />
         </section>
     </div>
     <section id="about" class="about wrapper">
         <div class="container">
-            <img src="/images/about-pets.png" alt="about pets" />
+            <img src="images/about-pets.png" alt="about pets" />
             <div class="block-info">
                 <h3>About the shelter “Cozy House”</h3>
                 <p>
@@ -80,28 +80,28 @@
             </h2>
             <div class="pets-slider">
                 <button class="btn-arrow">
-                    <img src="/icons/arrow_left.svg" alt="Arrow left" />
+                    <img src="icons/arrow_left.svg" alt="Arrow left" />
                 </button>
                 <div class="carousel">
                     <div class="carousel-wrapper">
                         <div class="pet-card-items left">
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/katrine.png" alt="Katrine img" />
+                                    <img src="images/katrine.png" alt="Katrine img" />
                                 </div>
                                 <h3>Katrine</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/jennifer.png" alt="Jennifer img" />
+                                    <img src="images/jennifer.png" alt="Jennifer img" />
                                 </div>
                                 <h3>Jennifer</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/woody.png" alt="Woody img" />
+                                    <img src="images/woody.png" alt="Woody img" />
                                 </div>
                                 <h3>Woody</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
@@ -110,21 +110,21 @@
                         <div class="pet-card-items center">
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/katrine.png" alt="Katrine img" />
+                                    <img src="images/katrine.png" alt="Katrine img" />
                                 </div>
                                 <h3>Katrine</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/jennifer.png" alt="Jennifer img" />
+                                    <img src="images/jennifer.png" alt="Jennifer img" />
                                 </div>
                                 <h3>Jennifer</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/woody.png" alt="Woody img" />
+                                    <img src="images/woody.png" alt="Woody img" />
                                 </div>
                                 <h3>Woody</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
@@ -133,21 +133,21 @@
                         <div class="pet-card-items right">
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/katrine.png" alt="Katrine img" />
+                                    <img src="images/katrine.png" alt="Katrine img" />
                                 </div>
                                 <h3>Katrine</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/jennifer.png" alt="Jennifer img" />
+                                    <img src="images/jennifer.png" alt="Jennifer img" />
                                 </div>
                                 <h3>Jennifer</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
                             </div>
                             <div class="pet-card-item">
                                 <div class="pet-img">
-                                    <img src="/images/woody.png" alt="Woody img" />
+                                    <img src="images/woody.png" alt="Woody img" />
                                 </div>
                                 <h3>Woody</h3>
                                 <div class="btn-learn-more" href="#!">Learn more</div>
@@ -156,17 +156,17 @@
                     </div>
                 </div>          
                 <button class="btn-arrow">
-                    <img src="/icons/arrow_right.svg" alt="Arrow right" />
+                    <img src="icons/arrow_right.svg" alt="Arrow right" />
                 </button>
             </div>
-            <a href="/index.html" class="btn-pets">
+            <a href="index.html" class="btn-pets">
                 Get to know the rest</a
             >
             <div class="modal-window-wrapper">
                 <div class="modal-window">
-                    <button class="btn-modal-close"><img src="/icons/close.svg" alt="X"></button>
+                    <button class="btn-modal-close"><img src="icons/close.svg" alt="X"></button>
                     <div class="modal-window-container">
-                        <img alt="Pet image" src="/images/jennifer.png">
+                        <img alt="Pet image" src="images/jennifer.png">
                         <div class="modal-window-content">
                             <h3 class="pet-name">Jennifer</h3>
                             <h4 class="pet-type">Dog - Labrador</h4>
@@ -205,63 +205,63 @@
             <div class="help-items">
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-pet-food.svg" alt="icon pet food" />
+                        <img src="icons/icon-pet-food.svg" alt="icon pet food" />
                     </div>
                     <div class="item-name">Pet food</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-transportation.svg" alt="icon transportation" />
+                        <img src="icons/icon-transportation.svg" alt="icon transportation" />
                     </div>
                     <div class="item-name">Transportation</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-toys.svg" alt="icon toys" />
+                        <img src="icons/icon-toys.svg" alt="icon toys" />
                     </div>
                     <div class="item-name">Toys</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-bowls-and-cups.svg" alt="icon bowls and cups" />
+                        <img src="icons/icon-bowls-and-cups.svg" alt="icon bowls and cups" />
                     </div>
                     <div class="item-name">Bowls and cups</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-shampoos.svg" alt="icon shampoos" />
+                        <img src="icons/icon-shampoos.svg" alt="icon shampoos" />
                     </div>
                     <div class="item-name">Shampoos</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-vitamins.svg" alt="icon vitamins" />
+                        <img src="icons/icon-vitamins.svg" alt="icon vitamins" />
                     </div>
                     <div class="item-name">Vitamins</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-medicines.svg" alt="icon medicines" />
+                        <img src="icons/icon-medicines.svg" alt="icon medicines" />
                     </div>
                     <div class="item-name">Medicines</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-collars-leashes.svg" alt="icon collars/leashes" />
+                        <img src="icons/icon-collars-leashes.svg" alt="icon collars/leashes" />
                     </div>
                     <div class="item-name">Collars / leashes</div>
                 </div>
   
                 <div class="help-item">
                     <div class="help-img">
-                        <img src="/icons/icon-sleeping-area.svg" alt="icon sleeping areas" />
+                        <img src="icons/icon-sleeping-area.svg" alt="icon sleeping areas" />
                     </div>
                     <div class="item-name">Sleeping areas</div>
                 </div>
@@ -270,12 +270,12 @@
     </section>
       <section class="donation">
         <div class="container wrapper">
-            <img src="/images/donation-dog.png" alt="donation dog" />
+            <img src="images/donation-dog.png" alt="donation dog" />
             <div class="donation-content">
                 <h3>You can also <br /> make a donation</h3>
                 <h5>Name of the bank / Type of bank account</h5>
                 <div class="donation-card">
-                    <a href="#"><img src="/icons/icon-credit-card.svg" alt="icon credit card"
+                    <a href="#"><img src="icons/icon-credit-card.svg" alt="icon credit card"
                     />8380 2880 8028 8791 7435</a>
                 </div>
                 <p>
@@ -294,14 +294,14 @@
                 <div class="block-info">
                     <a href="mailto:email@shelter.com"
                     ><img
-                        src="/icons/icon-email.svg"
+                        src="icons/icon-email.svg"
                         alt="icon email"
                     /><h4>email@shelter.com</h4></a
                     >
                 </div>
                 <div class="block-info">
                     <a href="tel:+13 674 567 75 54">
-                        <img src="/icons/icon-phone.svg" alt="icon phone" />
+                        <img src="icons/icon-phone.svg" alt="icon phone" />
                         <h4>+13 674 567 75 54</h4>
                     </a>
                 </div>
@@ -310,20 +310,20 @@
                 <h3>We are waiting <br />for your visit</h3>
                 <div class="block-info">
                     <a  href="https://www.google.com.hk/maps/place/1+Central+St,+Boston,+MA+02109,+USA/@42.3585531,-71.055377,18z/data=!3m1!4b1!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=en" target="_blank"
-                    ><img src="/icons/pin.svg" alt="icon pin" /><h4>1 Central Street,
+                    ><img src="icons/pin.svg" alt="icon pin" /><h4>1 Central Street,
                         Boston<br/>(entrance from the store)</h4></a>
                     </div>
                 <div class="block-info">
                     <a href="https://www.google.com/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202718,-0.2023686,17z/data=!3m1!4b1!4m5!3m4!1s0x487608baa7401b31:0x18e66d9fcd2f7d77!8m2!3d51.4202685!4d-0.2001799?hl=ru" target="_blank"
-                    ><img src="/icons/pin.svg" alt="icon pin" /><h4>18 South Park, London</h4></a>
+                    ><img src="icons/pin.svg" alt="icon pin" /><h4>18 South Park, London</h4></a>
                 </div>
             </div>
             <div class="footer-img">
-                <img src="/images/footer-puppy.png" alt="footer puppy" />
+                <img src="images/footer-puppy.png" alt="footer puppy" />
             </div>
         </div>
       </footer>
 </body>
-<script type="module" src="/js/script.js"></script>
-<script type="module" src="/js/main.js"></script>
+<script type="module" src="js/script.js"></script>
+<script type="module" src="js/main.js"></script>
 </html>
